--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,15 @@
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.username=Aommy
+#spring.datasource.password=Aommy07092541
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/sme?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: root
-    password: 
+    url: jdbc:mysql://localhost:3306/sme
+    username: Aommy
+    password: Aommy07092541
+  jpa:
+    show-sql: true
+  servlet:
+    multipart:
+      max-file-size: 2MB
 server:
-    port: 7070
+  port: 7070
