--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>pdfbox-tools</artifactId>
 			<version>2.0.20</version>
 		</dependency>
+		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-devtools</artifactId>
+  			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
